# Flask_Web_Development

./: config.py  data-dev.sqlite  data.sqlite  improovments.txt  main.py  pyproject.toml  requirements.txt
app/: __init__.py  email.py  fake.py  models.py
app/api/: authentication.py  comments.py  decorators.py  errors.py  posts.py  users.py
app/auth/: forms.py  froms.py  views.py
app/main/: errors.py  forms.py  views.py
app/templates/: 403.html  _comments.html  _macros.html  _posts.html  base.html  followers.html  index.html  post.html  user.html
app/templates/auth/: changemail.html  changepass.html  forgotenpass.html  (+4 more)
migrations/versions/: 19c4c192d21c_initial_migration.py  4e09a5cb68d1_added_follow_model.py  821c9a7f792b_avatar_hash_added_to_user_model.py  8cf88fa9756b_permission_class_added_and_role_class_.py  b2f4fd77c723_body_html_on_post_model_added.py  b86e861d8baf_user_model_upgraded.py
requirements/: common.txt  dev.txt  heroku.txt
templates/: base.html
templates/mail/: new_user.html  new_user.txt
tests/: test_api.py  test_client.py  test_selenium.py  test_user_model.py
tmp/coverage/: app___init___py.html  app_api___init___py.html  app_api_authentication_py.html  app_api_comments_py.html  app_api_decorators_py.html  app_api_errors_py.html  app_api_posts_py.html  app_api_users_py.html  app_auth___init___py.html  app_auth_froms_py.html  app_auth_views_py.html  app_decorators_py.html  app_email_py.html  app_main___init___py.html  app_main_errors_py.html  app_main_forms_py.html  app_main_views_py.html  app_models_py.html  index.html  status.json
(+8 files in other folders)
