[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
name = "root"
version = "0.0.0"
description="flask template"
[tool.poetry.dependencies]
flask = "==1.0.2"
python = "^3.8"
Flask-Bootstrap = "^3.3.7"
Flask-Moment = "^0.11.0"
Flask-WTF = "^0.15.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.0.1"
Flask-Mail = "^0.9.1"
Flask-Login = "^0.5.0"
email-validator = "^1.1.3"
wtforms-validators = "^1.0.0"
